--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
       3: "Bello chica, hallo papagena tu la bella con la papaya."
     };
     const giftTitles = { 1: "Gift 1", 2: "Gift 2", 3: "Gift 3" };
-    const giftTopics = { 1: "Eyes", 2: "Smile", 3: "Lips" };
+    const giftTopics = { 1: "Eyes", 2: "Smile", 3: "You" };
 
     function setStepLabel(text) {
       const el = document.getElementById("step-label");
@@ -1073,5 +1073,6 @@
     updateLocks();
   </script>
 </body>
+
 
 </html>
